# lgtm-ci

./: .actrc  .gitignore  .lintro-config.yaml  .lintro-ignore  .markdownlintignore  .shellcheckrc  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json  report.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/: README.md
.github/workflows/: ci.yml  dependency-review.yml  pr-auto-assign.yml  pr-labeler.yml  prune-build-staging-tags.yml  registry-health-check.yml  release-auto-tag.yml  release-version-pr.yml  release.yml  renovate.yml  reusable-ai-review.yml  reusable-artifact-pr-comment.yml  reusable-auto-rerun-on-infra-failure.yml  reusable-build-artifact.yml  reusable-build-python-dist.yml  reusable-build-rust-binaries.yml  reusable-codeql.yml  reusable-coverage-pr-comment.yml  reusable-coverage.yml  reusable-dependency-review.yml  reusable-deploy-pages.yml  reusable-deploy-site-with-reports.yml  reusable-docker-build.yml  reusable-docker-multiplatform.yml  reusable-docker-smoke-test.yml  reusable-docker.yml  reusable-ghcr-cleanup.yml  reusable-github-release.yml  reusable-link-check.yml  reusable-main-failure-notifier.yml  reusable-pr-auto-assign.yml  reusable-pr-labeler.yml  reusable-prune-build-staging-tags.yml  reusable-publish-artifact-preview.yml  reusable-publish-artifact-report.yml  reusable-publish-file-breakdown.yml  reusable-publish-gem.yml  reusable-publish-homebrew.yml  reusable-publish-npm.yml  reusable-publish-pypi-release.yml  (+46 more)
docs/: README.md  getting-started.md  onboarding.md  org-rulesets.md  pages-publishing.md  python-release-publish.md  release-changelog.md  reusable-workflows.md  rust-testing.md  rust-workspace-testing.md  workflow-contract.md
docs/actions/: README.md  coverage.md  notifications.md  pr-comments.md  publishing.md  release.md  security.md  setup.md  testing.md
docs/libraries/: README.md  reference.md
examples/: README.md  auto-rerun-on-infra-failure.yml  bundle-manifest-turbo-themes.json  ci-docker.yml  ci-node-custom.yml  ci-node-vitest.yml  ci-python.yml  ci-quality-only.yml  ci-rust.yml  nextest-ci.toml  publish-python-release.yml  release-auto-tag.yml  release-version-pr-changelog-only.yml  release-version-pr.yml
scripts/ci/lib/: fs.sh  (+16 more)
(+728 files in other folders)
